[gd_scene load_steps=5 format=3 uid="uid://3ow5m0minlt2"]

[ext_resource type="Script" uid="uid://ccksy768j568l" path="res://hub.gd" id="1_p106a"]
[ext_resource type="Texture2D" uid="uid://cgdn7qj8ykm6" path="res://avatar_normal.png" id="2_kt6ty"]
[ext_resource type="Theme" uid="uid://04ex0vg6beua" path="res://theme.tres" id="2_ysrp0"]
[ext_resource type="PackedScene" uid="uid://dvhwxhu7xcdm" path="res://multiplayer_menu.tscn" id="4_fwqlr"]

[node name="hub" type="Node2D"]
script = ExtResource("1_p106a")

[node name="host" type="Button" parent="."]
offset_left = 440.0
offset_top = 149.0
offset_right = 840.0
offset_bottom = 359.0
theme = ExtResource("2_ysrp0")
theme_override_font_sizes/font_size = 120
text = "Host"

[node name="join" type="Button" parent="."]
offset_left = 440.0
offset_top = 376.0
offset_right = 840.0
offset_bottom = 586.0
theme = ExtResource("2_ysrp0")
theme_override_font_sizes/font_size = 120
text = "Join"

[node name="avatar" type="Sprite2D" parent="."]
position = Vector2(30, 30)
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_kt6ty")
centered = false

[node name="avatar_label" type="Label" parent="."]
offset_left = 204.0
offset_top = 80.0
offset_right = 324.0
offset_bottom = 129.0
theme = ExtResource("2_ysrp0")
text = "Avatar"

[node name="multiplayer_menu" parent="." instance=ExtResource("4_fwqlr")]
visible = false

[node name="host_ip_address" type="LineEdit" parent="."]
offset_top = 602.0
offset_right = 445.0
offset_bottom = 665.0
theme = ExtResource("2_ysrp0")
placeholder_text = "host ip address"

[node name="your_ip_address" type="Label" parent="."]
custom_minimum_size = Vector2(0.025, 0)
offset_top = 665.0
offset_right = 298.0
offset_bottom = 720.0
theme = ExtResource("2_ysrp0")
text = "your ip address"

[connection signal="pressed" from="host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="join" to="." method="_on_join_pressed"]
